Changed the expand/collapse text to buttons with icons. Fixed the spacing to show them on the same line.

--- a/css/editEvents.css
+++ b/css/editEvents.css
@@ -1,8 +1,4 @@
-#toggleCollapseAllEvents {
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-#toggleCollapseAllEvents:hover {
-  text-decoration: none;
+#expandCollapseAllEvents {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
